<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/bk_drp"
        android:layout_height="140dp">

    </RelativeLayout>
<RelativeLayout
    android:layout_width="match_parent"

    android:layout_height="280dp">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/back_drop"
        android:scaleType="centerCrop"
        android:src="@drawable/spacex"
         />


    <androidx.cardview.widget.CardView
        android:layout_width="550dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/quote"
        android:layout_marginBottom="30dp"
        >

<TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/shaw"
    android:textSize="24sp"
    android:fontFamily="@font/futuraitalic"
    android:textStyle="bold"
    android:layout_gravity="center_vertical"
    android:textColor="@color/black"
    android:layout_marginStart="15dp"
    />

    </androidx.cardview.widget.CardView>
</RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="940dp"
        android:layout_marginTop="140dp"

        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/acc"
            />
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="710dp"
        android:layout_alignParentBottom="true"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/pep"
            android:id="@+id/uname"
            android:fontFamily="@font/amberlylight"
            android:textSize="60sp"
            android:textColor="@color/black"

            />

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_toEndOf="@+id/uname"
            android:layout_marginTop="51dp"
            android:src="@drawable/ic_toonmoon"
            android:layout_marginStart="20dp"

            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/josep_guardiola"
            android:layout_centerHorizontal="true"
            android:textSize="18sp"
            android:layout_marginTop="90dp"
            android:textColor="@color/black" />

        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="250dp"
            app:cardElevation="15dp"
            android:layout_marginTop="200dp"
            android:clickable="true"
            android:focusable="true"
            android:stateListAnimator="@animator/selector_raise"
            android:id="@+id/act"
            android:layout_marginStart="70dp"
            app:cardCornerRadius="10dp"
            >
<ImageView
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:layout_margin="10dp"
    android:src="@drawable/ic_icons8_settings_3"
    />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="250dp"
            app:cardElevation="15dp"
            android:clickable="true"
            android:layout_marginTop="200dp"
            android:focusable="true"
            android:layout_toEndOf="@id/act"
            android:stateListAnimator="@animator/selector_raise"
            android:id="@+id/money"
            android:layout_marginStart="60dp"
            app:cardCornerRadius="10dp"
            >

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_icons8_financial_dynamic_presentation_1"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="250dp"
            app:cardElevation="15dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="200dp"
            android:layout_toEndOf="@id/money"
            android:id="@+id/pro"
            android:stateListAnimator="@animator/selector_raise"
            android:layout_marginStart="60dp"
            app:cardCornerRadius="10dp"
            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_icons8_coins"
                />
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="400dp"
            android:layout_height="250dp"
            app:cardElevation="15dp"
            android:layout_marginTop="200dp"
            android:clickable="true"
            android:layout_toEndOf="@id/pro"
            android:focusable="true"
            android:stateListAnimator="@animator/selector_raise"
            android:id="@+id/misc"
            android:layout_marginStart="70dp"
            app:cardCornerRadius="10dp"
            >
            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="10dp"
                android:src="@drawable/ic_icons8_chat_2"
                />
        </androidx.cardview.widget.CardView>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="100dp"
            android:background="@color/colorPrimaryDark"
            >

        </RelativeLayout>



    </RelativeLayout>

<RelativeLayout
    android:layout_width="180dp"
    android:layout_below="@id/bk_drp"
    android:layout_height="180dp"
    android:layout_marginTop="50dp"
    android:layout_centerHorizontal="true"

    >

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="90dp"
    app:cardBackgroundColor="@color/pro"
    app:cardElevation="0dp"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:src="@drawable/man37974"
        />

</androidx.cardview.widget.CardView>

</RelativeLayout>

</RelativeLayout>